--- a/view/index.html
+++ b/view/index.html
@@ -20,12 +20,14 @@
 	
 		<div class="card">
 		
-			<div class="card-header text-center"><h2>Introduction</h2></div>
+			<div class="card-header text-center">
+				<h2>Introduction</h2>
+			</div>
 			
 			<div class="card-body">
 			
 				<!-- Chapter Image -->
-				<img src="assets/spaceStation.png" class="rounded mx-auto d-block" alt="space station" width="400" height="550">
+				<img src="../assets/spaceStation.png" class="rounded mx-auto d-block" alt="space station" width="400" height="550">
 				
 				<!-- Body Text -->
 				<div class="row">
@@ -38,19 +40,8 @@
 				</div>
 				
 				<!-- Player Action Buttons -->
-				<div class="row">
-					<div class="col"></div>
-					<div class="col"></div>
-					<div class="col"></div>
-					<div class="col"></div>
-					<div class="col">
-						<button type="button" class="btn btn-primary">Chapter I</button>
-					</div>
-					<div class="col"></div>
-					<div class="col"></div>
-					<div class="col"></div>
-					<div class="col"></div>
-				</div>
+				<a href="chapterI.html"><button type="button" class="btn btn-primary">Begin Chapter I</button></a>
+			
 				
 			</div>
 			
