--- a/view/index.html
+++ b/view/index.html
@@ -40,7 +40,9 @@
 				</div>
 				
 				<!-- Player Action Buttons -->
-				<a href="chapterI.html"><button type="button" class="btn btn-primary">Begin Chapter I</button></a>
+				<div class="d-grid gap-2">
+					<a href="chapterI.html" class="btn btn-success" role="button">Begin Chapter I</a>
+				</div>
 			
 				
 			</div>
